<resources>
    <string name="app_name">Napolun2</string>
    <string name="text_main">following\nschedule</string>
    <string name="about_menu">Model Number\n1F86U-42wf</string>
    <string name="about_menu2">Fireware Version\n7012950400</string>
    <string name="home_menu">Home Screen\nContent</string>
    <string name="text1_test">Test\nDescription</string>
    <string name="text2_test">Cooling Air\nVolume Rate</string>
    <string name="text3_test">Air Entering indoor\nUnit Temprature(℃)</string>
    <string name="text4_test">Fan Speed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="value1_test">SEER1 95H A2</string>
    <string name="value2_test">Cooling Full_load</string>
    <string name="value3_test">26.7/19.4</string>
    <string name="value4_test">hign</string>
    <string name="warn_reset">After resetting,all the history settings will \nbe erased.\n\nAre you sure to reset to factory default?</string>
    <string name="title_auto">Lock screen Settings</string>
    <string name="title_call">Temperature Callbration</string>
    <string name="title_fan">Fan circulate time</string>
    <string name="title_input">Input password:</string>
    <string name="title_test">Seasonal energy-efficiency ratio,cooling(SEER)</string>
    <string name="test_description">Test Description</string>
    <string name="cooling_air_volume_rate">Cooling Air Volume Rate</string>
    <string name="air_entering_indoor_unit_temperature">Air Entering Indoor Unit Temperature (℃)</string>
    <string name="air_entering_outdoor_unit_temperature">Air Entering Outdoor Unit Temperature (℃)</string>
    <string name="compressor_speed">Compressor Speed</string>
    <string name="seer_item1">SEER1</string>
    <string name="seer_item2">SEER2</string>
    <string name="seer_item3">SEER3</string>
    <string name="seer_item4">SEER4</string>
    <string name="seer_item5">SEER5</string>
    <string name="seer_zimu1">95H</string>
    <string name="seer_zimu2">82H</string>
    <string name="seer_zimu3">87I</string>
    <string name="seer_zimu4">82L</string>
    <string name="seer_zimu5">67L</string>
    <string name="seer_xu1">A2</string>
    <string name="seer_xu2">B2</string>
    <string name="seer_xu3">Ev</string>
    <string name="seer_xu4">B1</string>
    <string name="seer_xu5">F1</string>
    <string name="cooling_full_load">Cooling Full-load</string>
    <string name="cooling_intermediate">Cooling Intermediate</string>
    <string name="cooling_minimum">Cooling Minimum</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="under_construction">Under construction</string>
    <string name="_1_parameters">1. Parameters</string>
    <string name="_2_advanced_settings">2. Advanced Settings</string>
    <string name="_3_alarm_history">3. Alarm History</string>
    <string name="_4_service">4. Service</string>
    <string name="current_alarms">Current Alarms</string>
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="clear_alarms">Clear Alarms</string>
</resources>
