<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FactoryFragment">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_10"
        android:id="@+id/rela_factory">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/time_btnbg"
            android:text="@string/_1_parameters"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/textColor_option"
            android:id="@+id/one_factory"
            android:paddingLeft="@dimen/dp_15"
            android:layout_margin="@dimen/dp_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/time_btnbg"
            android:text="@string/_2_advanced_settings"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/textColor_option"
            android:id="@+id/two_factory"
            android:paddingLeft="@dimen/dp_15"
            android:layout_below="@+id/one_factory"
            android:layout_margin="@dimen/dp_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/time_btnbg"
            android:text="@string/_3_alarm_history"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/textColor_option"
            android:id="@+id/three_factory"
            android:paddingLeft="@dimen/dp_15"
            android:layout_below="@+id/two_factory"
            android:layout_margin="@dimen/dp_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/time_btnbg"
            android:text="@string/_4_service"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/textColor_option"
            android:id="@+id/five_factory"
            android:paddingLeft="@dimen/dp_15"
            android:layout_below="@+id/three_factory"
            android:layout_margin="@dimen/dp_5"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/under_construction"
        android:textColor="@color/textColor_option"
        android:textSize="@dimen/dp_16"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:id="@+id/text_factory"/>

</android.support.constraint.ConstraintLayout>