<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_314"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/tap_wbg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/alarm"
        android:id="@+id/img_reset"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_reset"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/warn_reset"
        android:textSize="@dimen/dp_14"
        android:textColor="@color/black"
        android:id="@+id/warn_reset"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_popu"
        app:layout_constraintTop_toBottomOf="@+id/warn_reset"
        android:layout_marginTop="@dimen/dp_21"
        android:id="@+id/line_reset"/>

    <TextView
        android:layout_width="@dimen/dp_156"
        android:layout_height="@dimen/dp_41"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/line_reset"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/confirm"
        android:textSize="@dimen/dp_16"
        android:textColor="@color/black"
        android:id="@+id/ok_reset"/>

    <View
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_41"
        android:background="@color/line_popu"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@+id/ok_reset"
        app:layout_constraintRight_toRightOf="@+id/no_reset"
        app:layout_constraintTop_toBottomOf="@+id/line_reset" />

    <TextView
        android:layout_width="@dimen/dp_156"
        android:layout_height="@dimen/dp_41"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/line_reset"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cancel"
        android:textSize="@dimen/dp_16"
        android:textColor="@color/black"
        android:id="@+id/no_reset"/>
    
</android.support.constraint.ConstraintLayout>
