<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/tap_wbg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_34"
        android:layout_marginLeft="@dimen/dp_34"
        android:layout_marginRight="@dimen/dp_34"
        android:text="@string/title_input"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold"
        android:id="@+id/name_popu"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name_popu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@mipmap/account_f"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_34"
        android:layout_marginRight="@dimen/dp_34"
        android:id="@+id/pass_popu"
        android:paddingLeft="@dimen/dp_20"
        android:hint="Password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_popu"
        app:layout_constraintTop_toBottomOf="@+id/pass_popu"
        android:layout_marginTop="@dimen/dp_21"
        android:id="@+id/line_reset"/>

    <TextView
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_41"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/cancel_popu"
        app:layout_constraintTop_toBottomOf="@+id/line_reset"
        android:gravity="center"/>

    <View
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_41"
        android:background="@color/line_popu"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@+id/cancel_popu"
        app:layout_constraintRight_toRightOf="@+id/confirm_popu"
        app:layout_constraintTop_toBottomOf="@+id/line_reset" />

    <TextView
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_41"
        android:text="@string/confirm"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/confirm_popu"
        app:layout_constraintTop_toBottomOf="@+id/line_reset"
        android:gravity="center"/>

</android.support.constraint.ConstraintLayout>
